# lifelines

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cabinet Turnover.ipynb  Divorces Rates.ipynb  Documentation.ipynb  Intro to lifelines.ipynb  LICENSE  Lifelines Examples.ipynb  MANIFEST.in  Makefile  Pipfile  README.md  README.txt  Survival Analysis intro.ipynb  The Gehan Survival Data.ipynb  Tree.txt  Tutorial and Examples.ipynb  _typos.toml  conftest.py  dev-requirements.txt  estimation.py  filename.joblib  generate_datasets.py  myFile.txt  myfile.txt  mypy.ini  requirements.txt  setup.cfg  setup.py  simple_tests.py  survival12  tree.txt  tutorial_and_examples.ipynb
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
datasets/: Divorces Rates.ipynb  The Gehan Survival Data.ipynb  canadian_senators.csv  dd.csv  kidney_transplant.csv  lung.csv  psychiatric_patients.csv  static_test.csv
demo/: Demo_Coxph.py  Demo_KaplanMeier.py  Demo_MelsonAalen.png.py  Demo_lifetimes.py
docs/: Changelog.rst  Citing lifelines.rst  Compatibility with scikit-learn.rst  Contributing.rst  Documentation.ipynb  Examples.rst  Intro to lifelines.rst  Makefile  Quickstart.rst  References.rst  Survival Analysis intro.rst  Survival Regression.rst  Survival analysis with lifelines.rst  Time varying survival regression.rst  conf.py  conftest.py  docs_requirements.txt  examples.rst  index.rst  lifelines.calibration.rst  lifelines.datasets.rst  lifelines.fitters.rst  lifelines.plotting.rst  (+5 more)
(+262 files in other folders)
